Site is usable now :)

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egzamin EE08</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../js/common.js"></script>
-    <script src="../js/darkmode.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/darkmode.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -26,14 +26,23 @@
             <h1>Pytania na egzamin</h1>
             <hr/>
 
-            Pytania z kategorii sieci (łącznie około 900 pytań):<br/>
+            Pytania z kategorii Sieci (łącznie 900 pytań):<br/>
             <a class="link-button btn-show" href="/categories/sieci.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
             <br/>
             <a class="link-button btn-download" href="/json/sieci.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
             <br/><br/>
 
-            Pytania z ketegorii systemy: <br/>
-            <a href="/categories/systemy.html">(link do kompletnej bazy pytań)</a>
+            Pytania z kategorii Systemy (łącznie 377 pytań): <br/>
+            <a class="link-button btn-show" href="/categories/systemy.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <br/>
+            <a class="link-button btn-download" href="/json/systemy.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <br/><br/>
+
+            Pytania z kategorii Sprzęt (łącznie 574 pytań): <br/>
+            <a class="link-button btn-show" href="/categories/sprzet.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <br/>
+            <a class="link-button btn-download" href="/json/sprzet.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <br/><br/>
         </section>
     </div>
 
