--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
             <hr/>
 
             Pytania z kategorii Sieci (łącznie 900 pytań):<br/>
-            <a class="link-button btn-show" href="/categories/sieci.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <a class="link-button btn-show" href="categories/sieci.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
             <br/>
-            <a class="link-button btn-download" href="/json/sieci.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <a class="link-button btn-download" href="json/sieci.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
             <br/><br/>
 
             Pytania z kategorii Systemy (łącznie 377 pytań): <br/>
-            <a class="link-button btn-show" href="/categories/systemy.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <a class="link-button btn-show" href="categories/systemy.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
             <br/>
-            <a class="link-button btn-download" href="/json/systemy.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <a class="link-button btn-download" href="json/systemy.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
             <br/><br/>
 
             Pytania z kategorii Sprzęt (łącznie 574 pytań): <br/>
-            <a class="link-button btn-show" href="/categories/sprzet.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <a class="link-button btn-show" href="categories/sprzet.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
             <br/>
-            <a class="link-button btn-download" href="/json/sprzet.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <a class="link-button btn-download" href="json/sprzet.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
             <br/><br/>
         </section>
     </div>
