Added first exam to exams jsn

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egzamin EE08</title>
+    <title>Egzamin EE.08</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/common.js"></script>
     <script src="js/darkmode.min.js"></script>
+    <link rel="icon" href="favicon.ico"/>
+    <meta name="author" content="Daniel Rogowski"/>
+    <meta name="description" content="Panie Bożu jeśli istniejesz zrób tak żebym to zdał."/>
 </head>
 <body>
     <div class="container">
@@ -20,6 +23,7 @@
             <p>Problem w tym, że na raz można wyświetlić tylko 40 losowych.</p>
             <p>I jak próbowałem się z tego uczyć, to cały czas losowało mi praktycznie te same pytania.</p>
             <p>Więc żeby to obejść, napisałem sobie taki skrypt, który pobierze te 1800 pytań i wyświetli jako listę.</p>
+            <p>PS. Zelent nie pozywaj mnie prosze.</p>
         </section>
 
         <section>
