--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             <h1>Pytania na egzamin</h1>
             <hr/>
 
+            <strong>Bonus - pytania z egzaminów EE.08 z poprzednich lat (2018-2020)</strong><br/>
+            Łącznie 160 pytań z 4 arkuszy<br/>
+            <a class="link-button btn-show" href="categories/stare-arkusze.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
+            <br/>
+            <a class="link-button btn-download" href="json/stare-arkusze.json"><i class="fa fa-download"></i> (kliknij, by pobrać bazę w surowym formacie JSON)</a>
+            <br/><br/>
+
             Pytania z kategorii Sieci (łącznie 900 pytań):<br/>
             <a class="link-button btn-show" href="categories/sieci.html"><i class="fa fa-list"></i> (kliknij, by wyświetlić kompletną bazę pytań)</a>
             <br/>
